# confess_bot

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
src/: commands.rs  confess.rs  main.rs  persistence.rs  scheduler.rs
